Fix button style issues on iPhone

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -11,13 +11,16 @@ body
   background-size contain
   opacity 0.3
 
+#content
+  width 100%
+  max-width 400px
+
 h1
   margin-bottom 0.3em
 
 div.brew
   padding 8px
   margin-bottom 10px
-  max-width 400px
   border-radius 8px
   border-width 2px
   border-style solid
@@ -56,9 +59,9 @@ div.brewing
   color #696969
 
 #brew-simple-form button
-  width 400px
-  max-width 400px
+  width 100%
   height 50px
+  padding 8px
   margin-bottom 10px
   cursor pointer
   border-radius 8px
